--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,5 +10,10 @@
   <%= @order.domain %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= @order.user %>
+</p>
+
 <%= link_to 'Edit', edit_order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
