Rename user -> owner on order

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @order.user %>
+  <strong>Owner:</strong>
+  <%= @order.owner %>
 </p>
 
 <%= link_to 'Edit', edit_order_path(@order) %> |
