--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -15,5 +15,16 @@
   <%= @order.owner %>
 </p>
 
-<%= link_to 'Edit', edit_order_path(@order) %> |
+<p>
+  <strong>Items:</strong>
+</p>
+<ul>
+    <% @order.order_items.each do |order_item| %>
+      <%= order_item.user %>
+    <% end %>
+</ul>
+
+<%= render 'order_items/form' %>
+
+<%= link_to 'Edit', edit_order_path(@order) %>
 <%= link_to 'Back', orders_path %>
