--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@order) do |f| %>
-  <% if @order.errors.any? %>
+<%= form_for(@ingredient) do |f| %>
+  <% if @ingredient.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
+      <h2><%= pluralize(@ingredient.errors.count, "error") %> prohibited this ingredient from being saved:</h2>
 
       <ul>
-      <% @order.errors.full_messages.each do |message| %>
+      <% @ingredient.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -15,7 +15,6 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-
   <div class="actions">
     <%= f.submit %>
   </div>
