--- a/app/views/order_items/_form.html.erb
+++ b/app/views/order_items/_form.html.erb
@@ -1,25 +1,9 @@
-<%= form_for(@order_item) do |f| %>
-  <% if @order_item.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@order_item.errors.count, "error") %> prohibited this order_item from being saved:</h2>
+<%= form_for([@order, @order.order_items.build]) do |f| %>
 
-      <ul>
-      <% @order_item.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= f.select :ingredients, Ingredient.all.map { |i| [i.name, i.id] }, {}, { :multiple => true, :size => 8 } %>
 
-  <div class="field">
-    <%= f.label :order_id %><br>
-    <%= f.text_field :order_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
-  <div class="actions">
+<div class="actions">
     <%= f.submit %>
-  </div>
+</div>
+
 <% end %>
