added growl like notifications

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import  "material";
-@import  "ripples";
-@import  "roboto";
-@import  "font-awesome";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "material";
+@import "ripples";
+@import "roboto";
+@import "animate";
