--- a/app/assets/stylesheets/roboto.css
+++ b/app/assets/stylesheets/roboto.css
@@ -1,25 +1,33 @@
 @font-face {
   font-family: 'RobotoDraft';
+  src:url('RobotoDraftRegular.woff') format('woff'),
+      url('RobotoDraftRegular.woff2') format('woff2');
   font-style: normal;
   font-weight: 400;
-  src: local('RobotoDraft'), local('RobotoDraft-Regular'), local('Roboto-Regular'), url(../fonts/RobotoDraftRegular.woff2) format('woff2'), url(../fonts/RobotoDraftRegular.woff) format('woff');
 }
+
 @font-face {
   font-family: 'RobotoDraft';
+  src:url('RobotoDraftMedium.woff') format('woff'),
+      url('RobotoDraftMedium.woff2') format('woff2');
   font-style: normal;
   font-weight: 500;
-  src: local('RobotoDraft Medium'), local('RobotoDraft-Medium'), local('Roboto-Medium'), url(../fonts/RobotoDraftMedium.woff2) format('woff2'), url(../fonts/RobotoDraftMedium.woff) format('woff');
 }
+
 @font-face {
   font-family: 'RobotoDraft';
+  src:url('RobotoDraftBold.woff') format('woff'),
+      url('RobotoDraftBold.woff2') format('woff2');
   font-style: normal;
   font-weight: 700;
-  src: local('RobotoDraft Bold'), local('RobotoDraft-Bold'), local('Roboto-Bold'), url(../fonts/RobotoDraftBold.woff2) format('woff2'), url(../fonts/RobotoDraftBold.woff) format('woff');
 }
+
 @font-face {
   font-family: 'RobotoDraft';
+  src:url('RobotoDraftItalic.woff') format('woff'),
+      url('RobotoDraftItalic.woff2') format('woff2');
   font-style: italic;
   font-weight: 400;
-  src: local('RobotoDraft Italic'), local('RobotoDraft-Italic'), local('Roboto-Italic'), url(../fonts/RobotoDraftItalic.woff2) format('woff2'), url(../fonts/RobotoDraftItalic.woff) format('woff');
 }
+
 /*# sourceMappingURL=roboto.css.map */
