added Admin page at /admin

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -12,6 +12,9 @@
         = link_to('Dashboard', "#")
       %li
         = link_to('New Order', "#")
+      %li
+        = link_to('Admin', rails_admin_path)
+
 
 
     %ul.nav.navbar-nav.navbar-right
