--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
   = link_to 'Create a new order', new_order_path, class: "btn btn-info btn-lg"
 
 - if @user_orders.any?
-  %h3 Open orders you have created:
+  %h3 Orders you have created:
   %br
 
   .list-group
@@ -28,7 +28,7 @@
 
 
 - if @domain_orders.any?
-  %p Open orders in your domain:
+  %p Orders you can:
   %ul
     - @domain_orders.each do |order|
       .row-action-primary
