Show user email

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,7 +9,7 @@
 <% @order.rolls.each do |roll| %>
   <p>
     <strong>Owner:</strong>
-    <%= roll.owner %>
+    <%= roll.owner.email %>
   </p>
   <%= link_to 'Remove roll', [roll],
               method: :delete,
