--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,9 +9,9 @@
   .navbar-collapse.collapse.navbar-responsive-collapse
     %ul.nav.navbar-nav
       %li.active
-        = link_to('Dashboard', "#")
+        = link_to('Dashboard', root_path)
       %li
-        = link_to('New Order', "#")
+        = link_to('New Order', new_order_path)
       %li
         = link_to('Admin', rails_admin_path)
 
