--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -9,8 +9,8 @@
       .row-action-primary
         %i.fa.fa-cutlery
       .row-content
-        .least-content
-          -# = link_to 'Remove', roll_path(roll), method: :delete, class: "btn btn-warning btn-sm"
+        .pull-right
+          = link_to 'Remove', roll_path(roll), method: :delete, class: "btn btn-warning btn-sm"
         %h4.list-group-item-heading
           = roll.owner.given_name
         %p.list-group-item-text
@@ -20,8 +20,6 @@
           %br
           %br
           = link_to 'Edit', roll_path(roll), class: "btn btn-primary btn-sm"
-          = link_to 'Remove', roll_path(roll), method: :delete, class: "btn btn-warning btn-sm"
-
       .list-group-separator
       %br
 
