--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -14,9 +14,7 @@
         %h4.list-group-item-heading
           = roll.owner.given_name
         %p.list-group-item-text
-          - roll.ingredients.each do |i|
-            = i.name
-            |
+          = roll.ingredients.map(&:name).join(' | ')
           %br
           %br
           = link_to 'Edit', roll_path(roll), class: "btn btn-primary btn-sm"
