--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -32,8 +32,6 @@
 /           data: { confirm: 'Are you sure?' }
 
 %br
-= form_for([@order, @order.rolls.build]) do |f|
-  %button.btn.btn-primary.btn-lg{:type => "submit"}
-    Add A Roll
+  = link_to 'Add Your Roll', new_order_roll_path(@order), class: "btn btn-primary btn-sm"
 / = link_to 'Edit', edit_order_path(@order)
 / = link_to 'Back', orders_path
