--- a/app/views/rolls/_form.html.haml
+++ b/app/views/rolls/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @roll do |f|
+= form_for([@order, @order.rolls.build]) do |f|
   %fieldset
     - if @roll.errors.any?
       #error_explanation
